--- a/css/styles.css
+++ b/css/styles.css
@@ -8,20 +8,55 @@
     --btn-second-color: #188CE8;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
+ul,
+ol {
+    margin: 0;
+    padding-left: 0;
+}
+
+a {
+    color: currentColor;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--main-title-color);
     font-size: 14px;
     letter-spacing: 0.03em;
-    background-color: var(--white);;
+    background-color: var(--white);
+    ;
 }
+
 .list {
     list-style: none;
 }
+
 .link {
     text-decoration: none;
 
 }
+
+.container {
+    /* width: 100%;
+    max-width: 1200px; */
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    outline: 2px solid red;
+}
+
 .btn {
     cursor: pointer;
 }
@@ -53,30 +88,57 @@ body {
 
 /* ---------------------------HEADER------------------------------- */
 
+.header {
+    padding: 30px 0px;
+}
+
+.header-logo {
+    margin-right: 90px;
+}
+
+.header>.container {
+    display: flex;
+    align-items: center;
+}
+
+.header-list {
+    display: flex;
+}
+
+.header-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.header-contacts-list {
+    display: flex;
+}
+
 .header-logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
-color: var(--black-logo-color);
-text-decoration: none;
+    font-size: 26px;
+    line-height: 1.19;
+    color: var(--black-logo-color);
+    text-decoration: none;
 }
+
 .logo-web {
     font-family: 'Raleway', sans-serif;
-font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
-color: var(--accent-color);
-text-decoration: none;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    color: var(--accent-color);
+    text-decoration: none;
 }
 
 
 .header-link {
     font-weight: 500;
-line-height: 1.14;
-letter-spacing: 0.02em;
-color: inherit;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: inherit;
 }
+
 
 .current {
     color: var(--accent-color);
@@ -84,9 +146,17 @@ color: inherit;
 
 .header-contact {
     font-weight: 500;
-line-height: 1.14;
-letter-spacing: 0.02em;
-color: var(--main-text-color);
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--main-text-color);
+}
+
+.header-contacts {
+    margin-left: auto;
+}
+
+.mail {
+    margin-left: 50px;
 }
 
 /* ---------------------------HERO------------------------------- */
@@ -94,29 +164,53 @@ color: var(--main-text-color);
 .hero {
     background-color: #757575;
 }
-.hero-title {
-font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-color: var(--white); 
+
+.hero .container {
+    display: flex;
+    outline: 2px solid red;
 }
+
+.hero-content {
+    padding: 180px 200px 220px;
+    flex-grow: 1;
+}
+
+.hero-title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--white);
+    margin-bottom: 25px;
+    max-width: 700px;
+    min-height: 120px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .hero-btn {
     font-family: inherit;
     font-weight: 700;
-font-size: 16px;
-line-height: 1.88;
-display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 0.06em;
-color: var(--white);
-background: var(--accent-color);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    box-sizing: border-box;
+    border-color: transparent;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--white);
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    align-content: center;
+    margin: auto;
+    min-width: 200px;
+    min-height: 50px;
+    justify-content: center;
 }
+
 .hero-btn:hover,
 .hero-btn:focus {
     background: var(--btn-second-color);
@@ -126,16 +220,17 @@ border-radius: 4px;
 
 .about-title {
     font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: inherit;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: inherit;
 }
+
 .about-text {
-line-height: 1.71;
-letter-spacing: 0.03em;
-color: var(--main-text-color);
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
 }
 
 
@@ -143,34 +238,36 @@ color: var(--main-text-color);
 
 .title {
     font-weight: 700;
-font-size: 36px;
-line-height: 1.7;
-text-align: center;
-letter-spacing: 0.03em;
-color: inherit;
+    font-size: 36px;
+    line-height: 1.7;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: inherit;
 }
 
 /* ---------------------------TEAM------------------------------- */
 .team-name {
     font-weight: 500;
-font-size: 16px;
-line-height: 1.19;
-text-align: center;
-letter-spacing: 0.03em;
-color: inherit;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: inherit;
 }
+
 .team-text {
-font-size: 16px;
-line-height: 1.19;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--main-text-color);
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
 }
 
 /* ---------------------------FOOTER------------------------------- */
 .footer {
     background: #2F303A;
 }
+
 .address {
     font-style: normal;
 }
@@ -180,19 +277,21 @@ color: var(--main-text-color);
     letter-spacing: 0.03em;
     color: var(--white);
 }
+
 .address-link {
-line-height: 1.71;
-letter-spacing: 0.03em;
-color: rgba(255, 255, 255, 0.6);
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
 }
+
 .footer-logo {
     font-family: 'Raleway', sans-serif;
-font-weight: 700;
-font-size: 26px;
-line-height: 31px;
-letter-spacing: 0.03em;
-color: var(--white);
-text-decoration: none;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    color: var(--white);
+    text-decoration: none;
 }
 
 /* ---------------------------PORTFOLIO------------------------------- */
@@ -200,38 +299,34 @@ text-decoration: none;
 .projects-btn {
     font-family: inherit;
     font-weight: 500;
-font-size: 16px;
-line-height: 1.62;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--main-title-color);
-background: var(--main-button-color);
-border-radius: 4px;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-title-color);
+    background: var(--main-button-color);
+    border-radius: 4px;
 }
 
 .projects-btn:hover,
 .projects-btn:focus {
     color: var(--white);
     background: var(--accent-color);
-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 
 .projects-title {
     font-weight: 700;
-font-size: 18px;
-line-height: 2;
-letter-spacing: 0.06em;
-color: inherit;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: inherit;
 }
+
 .projects-text {
-font-size: 16px;
-line-height: 1.88;
-letter-spacing: 0.03em;
-color: var(--main-text-color);
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
 }
-
-
-
-
-
