--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --black-logo-color: #000000;
     --white: #ffffff;
     --btn-second-color: #188CE8;
+    --card-set-gap: 30px;
 }
 
 p,
@@ -58,6 +59,9 @@ body {
 }
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
+
 }
 
 .btn {
@@ -216,6 +220,7 @@ nav {
     min-width: 200px;
     min-height: 50px;
     justify-content: center;
+border-radius: 4px;
 }
 
 .hero-btn:hover,
@@ -234,7 +239,7 @@ nav {
     width: calc((100% - 60px) / 4);
 }
 .about-item:not(:last-child) {
-    margin-right: 30px;
+    margin-right: var(--card-set-gap);
 }
 
 .about-title {
@@ -272,7 +277,7 @@ nav {
 
 .about-us-list {
     display: flex;
-    gap: 30px;
+    gap: var(--card-set-gap);
 }
 
 
@@ -280,10 +285,11 @@ nav {
 .team {
     padding-top: 94px;
     padding-bottom: 94px;
+    background-color: #F5F4FA;
 }
 .team-list {
     display: flex;
-    gap: 30px;
+    gap: var(--card-set-gap);
 }
 
 .team-title {
@@ -305,9 +311,20 @@ nav {
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
+    margin-top: 10px;
 }
 .team-item {
     width: calc((100% - 60px) / 4);
+}
+
+.team-card-content {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.team-card-full {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
 }
 
 /* ---------------------------FOOTER------------------------------- */
@@ -351,6 +368,19 @@ margin-bottom: 9px;
 
 /* ---------------------------PORTFOLIO------------------------------- */
 
+.projects {
+padding-top: 94px;
+padding-bottom: 94px;
+}
+
+.projects-btn-list {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    margin-bottom: 34px;
+}
+
+
 .projects-btn {
     font-family: inherit;
     font-weight: 500;
@@ -361,6 +391,9 @@ margin-bottom: 9px;
     color: var(--main-title-color);
     background: var(--main-button-color);
     border-radius: 4px;
+    border: 2px solid transparent;
+box-sizing: content-box;
+padding: 6px 22px;
 }
 
 .projects-btn:hover,
@@ -369,6 +402,19 @@ margin-bottom: 9px;
     background: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
+}
+
+.projects-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left:calc(-1 * var(--card-set-gap));
+    margin-top:calc(-1 * var(--card-set-gap));
+}
+
+.projects-item {
+    flex-basis: calc(100% / 3 - var(--card-set-gap));
+    margin-left: var(--card-set-gap);
+    margin-top: var(--card-set-gap);
 }
 
 .projects-title {
@@ -384,4 +430,12 @@ margin-bottom: 9px;
     line-height: 1.88;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
+    margin-top: 4px;
+}
+
+.card-content {
+    padding: 20px;
+border-left: 1px solid #EEEEEE;
+border-bottom: 1px solid #EEEEEE;
+border-right: 1px solid #EEEEEE;
 }
