--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --white: #ffffff;
     --btn-second-color: #188CE8;
     --card-set-gap: 30px;
+    --hero-footer-clr: #2F303A;
 }
 
 p,
@@ -89,7 +90,10 @@ img {
     color: var(--accent-color);
 }
 
-
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 
 
 /* ---------------------------HEADER------------------------------- */
@@ -118,11 +122,12 @@ nav {
 }
 
 .header-item:not(:last-child) {
-    margin-right: 30px;
+    margin-right: 50px;
 }
 
 .header-contacts-list {
     display: flex;
+    margin-left: auto;
 }
 
 .header-logo {
@@ -163,9 +168,6 @@ nav {
     color: var(--main-text-color);
 }
 
-.header-contacts {
-    margin-left: auto;
-}
 
 .mail {
     margin-left: 50px;
@@ -174,19 +176,17 @@ nav {
 /* ---------------------------HERO------------------------------- */
 
 .hero {
-    background-color: #2F303A;
-    flex-grow: 1;
+    background-color: var(--hero-footer-clr);
+    padding: 200px 0;
 }
 
 .hero .container {
     display: flex;
     justify-content: center;
-    background-color: #2F303A;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
     
-}
-
-.hero-content {
-    padding: 180px 200px 220px;
 }
 
 .hero-title {
@@ -197,7 +197,7 @@ nav {
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--white);
-    margin-bottom: 25px;
+    margin-bottom: 30px;
     max-width: 700px;
     min-height: 120px;
 }
@@ -231,7 +231,6 @@ border-radius: 4px;
 
 /* ---------------------------ABOUT------------------------------- */
 .features {
-    padding-top: 94px;
 }
 .about-list {
     display: flex;
@@ -262,8 +261,7 @@ border-radius: 4px;
 
 /* ---------------------------ABOUT-US------------------------------- */
 .about-us {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 0;
 }
 
 .title {
@@ -285,12 +283,8 @@ border-radius: 4px;
 /* ---------------------------TEAM------------------------------- */
 .team {
     background-color: #F5F4FA;
-    flex-grow: 1;
 }
 .team> .container {
-    background-color: #F5F4FA;
-    padding-top: 94px;
-    padding-bottom: 94px;
 }
 .team-list {
     display: flex;
@@ -320,6 +314,9 @@ border-radius: 4px;
 }
 .team-item {
     width: calc((100% - 60px) / 4);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
+background: var(--white);
 }
 
 .team-card-content {
@@ -327,18 +324,10 @@ border-radius: 4px;
     padding-bottom: 30px;
 }
 
-.team-card-full {
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
-}
 
 /* ---------------------------FOOTER------------------------------- */
 .footer {
-    background: #2F303A;
-    flex-grow: 1;
-}
-.footer> .container {
-    background: #2F303A;
+    background: var(--hero-footer-clr);
     padding-top: 60px;
     padding-bottom: 60px;
 }
@@ -377,16 +366,11 @@ margin-bottom: 9px;
 
 /* ----------------------------PORTFOLIO------------------------------- */
 
-.projects {
-padding-top: 94px;
-padding-bottom: 94px;
-}
-
 .projects-btn-list {
     display: flex;
     justify-content: center;
     gap: 8px;
-    margin-bottom: 34px;
+    margin-bottom: 50px;
 }
 
 
