--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ body {
     padding-left: 15px;
     padding-right: 15px;
 }
+
 img {
     display: block;
     max-width: 100%;
@@ -71,6 +72,7 @@ img {
 .link:hover,
 .link:focus {
     color: var(--accent-color);
+    fill: var(--accent-color);
 }
 
 .visually-hidden {
@@ -105,7 +107,7 @@ nav {
 .header {
     padding: 30px 0px;
     border-bottom: 1px solid #ECECEC;
-    
+
 }
 
 .header-logo {
@@ -128,6 +130,15 @@ nav {
 .header-contacts-list {
     display: flex;
     margin-left: auto;
+}
+
+.header-contact {
+    display: flex;
+    align-items: center;
+}
+.contacts-icon{
+    margin-right: 10px;
+    display: flex;
 }
 
 .header-logo {
@@ -166,8 +177,8 @@ nav {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--main-text-color);
+    fill: var(--main-text-color);
 }
-
 
 .mail {
     margin-left: 50px;
@@ -178,6 +189,14 @@ nav {
 .hero {
     background-color: var(--hero-footer-clr);
     padding: 200px 0;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .hero .container {
@@ -186,7 +205,6 @@ nav {
     flex-wrap: wrap;
     flex-direction: column;
     align-content: center;
-    
 }
 
 .hero-title {
@@ -221,7 +239,7 @@ nav {
     min-width: 200px;
     min-height: 50px;
     justify-content: center;
-border-radius: 4px;
+    border-radius: 4px;
 }
 
 .hero-btn:hover,
@@ -229,15 +247,34 @@ border-radius: 4px;
     background: var(--btn-second-color);
 }
 
-/* ---------------------------ABOUT------------------------------- */
-.features {
-}
+/* ---------------------------FEATURES------------------------------- */
 .about-list {
     display: flex;
 }
+
 .about-item {
     width: calc((100% - 60px) / 4);
 }
+/* .about-item::before {
+    display: inline-block;
+    content: '';
+    width: 100%;
+    height: 120px;
+    background: var(--main-button-color);
+    border-radius: 4px;
+    margin-bottom: 30px;
+} */
+.feature-container {
+width: 100%;
+height: 120px;
+background-color: var(--main-button-color);
+border-radius: 4px;
+display: flex;
+align-items: center;
+justify-content: center;
+margin-bottom: 30px;
+}
+
 .about-item:not(:last-child) {
     margin-right: var(--card-set-gap);
 }
@@ -282,10 +319,9 @@ border-radius: 4px;
 
 /* ---------------------------TEAM------------------------------- */
 .team {
-    background-color: #F5F4FA;
+    background-color: var(--main-button-color);
 }
-.team> .container {
-}
+
 .team-list {
     display: flex;
     gap: var(--card-set-gap);
@@ -312,24 +348,76 @@ border-radius: 4px;
     color: var(--main-text-color);
     margin-top: 10px;
 }
+
 .team-item {
     width: calc((100% - 60px) / 4);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
-background: var(--white);
+    border-radius: 0px 0px 4px 4px;
+    background: var(--white);
 }
 
 .team-card-content {
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 16px;
 }
 
+.barbers-soc {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 30px;
+}
+
+.barbers-soc-link {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #AFB1B8;
+}
+
+.barbers-soc-link:hover,
+.barbers-soc-link:focus {
+    background-color: var(--accent-color);
+    fill: var(--white);
+}
+
+/* ---------------------------CLIENTS------------------------------- */
+.clients-list {
+    display: flex;
+    justify-content: center;
+}
+.clients-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.clients-link {
+    width: 170px;
+    height: 92px;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #AFB1B8;
+}
+.clients-link:hover,
+.clients-link:focus {
+    border-color: var(--accent-color);
+}
 
 /* ---------------------------FOOTER------------------------------- */
 .footer {
     background: var(--hero-footer-clr);
     padding-top: 60px;
     padding-bottom: 60px;
+}
+.footer>.container {
+    display: flex;
+    align-items: baseline;
 }
 
 .address {
@@ -357,11 +445,49 @@ background: var(--white);
     color: var(--white);
     text-decoration: none;
 }
+
 .address-list {
     margin-top: 20px;
 }
+
 .address-item:not(:last-child) {
-margin-bottom: 9px;
+    margin-bottom: 9px;
+}
+.footer-container {
+    margin-left: 70px;
+}
+.footer-list{
+    display: flex;
+}
+.footer-item:not(:last-child) {
+    margin-right: 10px;
+}
+.footer-link {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: var(--white);
+}
+.footer-link:hover,
+.footer-link:focus {
+    background-color: var(--accent-color);
+    fill: var(--white);
+}
+
+.footer-title {
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--white);
+margin-bottom: 20px;
 }
 
 /* ----------------------------PORTFOLIO------------------------------- */
@@ -385,8 +511,8 @@ margin-bottom: 9px;
     background: var(--main-button-color);
     border-radius: 4px;
     border: 2px solid transparent;
-box-sizing: content-box;
-padding: 6px 22px;
+    box-sizing: content-box;
+    padding: 6px 22px;
 }
 
 .projects-btn:hover,
@@ -400,8 +526,8 @@ padding: 6px 22px;
 .projects-list {
     display: flex;
     flex-wrap: wrap;
-    margin-left:calc(-1 * var(--card-set-gap));
-    margin-top:calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));
+    margin-top: calc(-1 * var(--card-set-gap));
 }
 
 .projects-item {
@@ -428,7 +554,7 @@ padding: 6px 22px;
 
 .card-content {
     padding: 20px;
-border-left: 1px solid #EEEEEE;
-border-bottom: 1px solid #EEEEEE;
-border-right: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
 }
