--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ ol {
 
 a {
     color: currentColor;
+    text-decoration: none;
 }
 
 body {
@@ -557,4 +558,9 @@ margin-bottom: 20px;
     border-left: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
+}
+.card:hover,
+.card:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    cursor: pointer;
 }
