--- a/css/styles.css
+++ b/css/styles.css
@@ -72,8 +72,7 @@ img {
 
 .link:hover,
 .link:focus {
-    color: var(--accent-color);
-    fill: var(--accent-color);
+    color: var(--accent-color);;
 }
 
 .visually-hidden {
@@ -133,15 +132,6 @@ nav {
     margin-left: auto;
 }
 
-.header-contact {
-    display: flex;
-    align-items: center;
-}
-.contacts-icon{
-    margin-right: 10px;
-    display: flex;
-}
-
 .header-logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -178,7 +168,6 @@ nav {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--main-text-color);
-    fill: var(--main-text-color);
 }
 
 .mail {
@@ -190,14 +179,6 @@ nav {
 .hero {
     background-color: var(--hero-footer-clr);
     padding: 200px 0;
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/hero.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 .hero .container {
@@ -255,25 +236,6 @@ nav {
 
 .about-item {
     width: calc((100% - 60px) / 4);
-}
-/* .about-item::before {
-    display: inline-block;
-    content: '';
-    width: 100%;
-    height: 120px;
-    background: var(--main-button-color);
-    border-radius: 4px;
-    margin-bottom: 30px;
-} */
-.feature-container {
-width: 100%;
-height: 120px;
-background-color: var(--main-button-color);
-border-radius: 4px;
-display: flex;
-align-items: center;
-justify-content: center;
-margin-bottom: 30px;
 }
 
 .about-item:not(:last-child) {
@@ -362,63 +324,11 @@ margin-bottom: 30px;
     padding-bottom: 16px;
 }
 
-.barbers-soc {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    margin-bottom: 30px;
-}
-
-.barbers-soc-link {
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    fill: #AFB1B8;
-}
-
-.barbers-soc-link:hover,
-.barbers-soc-link:focus {
-    background-color: var(--accent-color);
-    fill: var(--white);
-}
-
-/* ---------------------------CLIENTS------------------------------- */
-.clients-list {
-    display: flex;
-    justify-content: center;
-}
-.clients-item:not(:last-child) {
-    margin-right: 30px;
-}
-
-.clients-link {
-    width: 170px;
-    height: 92px;
-    border: 1px solid #AFB1B8;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    fill: #AFB1B8;
-}
-.clients-link:hover,
-.clients-link:focus {
-    border-color: var(--accent-color);
-}
-
 /* ---------------------------FOOTER------------------------------- */
 .footer {
     background: var(--hero-footer-clr);
     padding-top: 60px;
     padding-bottom: 60px;
-}
-.footer>.container {
-    display: flex;
-    align-items: baseline;
 }
 
 .address {
@@ -454,43 +364,6 @@ margin-bottom: 30px;
 .address-item:not(:last-child) {
     margin-bottom: 9px;
 }
-.footer-container {
-    margin-left: 70px;
-}
-.footer-list{
-    display: flex;
-}
-.footer-item:not(:last-child) {
-    margin-right: 10px;
-}
-.footer-link {
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    fill: var(--white);
-}
-.footer-link:hover,
-.footer-link:focus {
-    background-color: var(--accent-color);
-    fill: var(--white);
-}
-
-.footer-title {
-    font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--white);
-margin-bottom: 20px;
-}
-
 /* ----------------------------PORTFOLIO------------------------------- */
 
 .projects-btn-list {
